# sy_cpp_boilerplate

./: .editorconfig  CMakeLists.txt  README.md  main.cpp  sock.cpp  sock.h
examples/: ex_inheritence.cpp  ex_interface.cpp  ex_rawsock.cpp  ex_stl_map.cpp  ex_stl_multimap.cpp
examples/class_interface/: CMakeLists.txt  datastore.c  datastore.h  ex_interface.cpp  main.cpp  net.cpp  net.h
include/: mmap.h  performance.h  sock.h
lib/: sock.cpp
src/: mmap.cpp
static/: sample.txt
testapp/: t_mmap.cpp  t_stl.cpp
